adding creates talks/attendees
