# restapi/handlers/attendees.go
@@ -9,6 +9,7 @@ import (
 
 func AttachAttendeesHandlers(api *operations.AttendIoAPI) {
 	api.AttendeesGetAttendeeByFieldHandler = attendees.GetAttendeeByFieldHandlerFunc(GetAttendeeByField)
+	api.AttendeesPostAttendeesHandler = attendees.PostAttendeesHandlerFunc(CreateAttendee)
 }
 
 func GetAttendeeByField(params attendees.GetAttendeeByFieldParams) middleware.Responder {
@@ -21,4 +22,8 @@ func GetAttendeeByField(params attendees.GetAttendeeByFieldParams) middleware.Re
 	}
 
 	return attendees.NewGetAttendeeByFieldDefault(404) //NOT FOUND
+}
+
+func CreateAttendee(params attendees.PostAttendeesParams) middleware.Responder {
+	return attendees.NewPostAttendeesOK().WithPayload(services.Attendees().Create(params.Attendee))
 }
