# restapi/operations/attendees/delete_attendee_responses.go
@@ -1,0 +1,96 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package attendees
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/sctskw/attend.io/models"
+)
+
+// DeleteAttendeeNoContentCode is the HTTP code returned for type DeleteAttendeeNoContent
+const DeleteAttendeeNoContentCode int = 204
+
+/*DeleteAttendeeNoContent Attendee was deleted.
+
+swagger:response deleteAttendeeNoContent
+*/
+type DeleteAttendeeNoContent struct {
+}
+
+// NewDeleteAttendeeNoContent creates DeleteAttendeeNoContent with default headers values
+func NewDeleteAttendeeNoContent() *DeleteAttendeeNoContent {
+
+	return &DeleteAttendeeNoContent{}
+}
+
+// WriteResponse to the client
+func (o *DeleteAttendeeNoContent) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(204)
+}
+
+/*DeleteAttendeeDefault generic error response
+
+swagger:response deleteAttendeeDefault
+*/
+type DeleteAttendeeDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewDeleteAttendeeDefault creates DeleteAttendeeDefault with default headers values
+func NewDeleteAttendeeDefault(code int) *DeleteAttendeeDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &DeleteAttendeeDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the delete attendee default response
+func (o *DeleteAttendeeDefault) WithStatusCode(code int) *DeleteAttendeeDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the delete attendee default response
+func (o *DeleteAttendeeDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the delete attendee default response
+func (o *DeleteAttendeeDefault) WithPayload(payload *models.Error) *DeleteAttendeeDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete attendee default response
+func (o *DeleteAttendeeDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeleteAttendeeDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
