# restapi/operations/attendees/post_attendees_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package attendees
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/sctskw/attend.io/models"
+)
+
+// PostAttendeesOKCode is the HTTP code returned for type PostAttendeesOK
+const PostAttendeesOKCode int = 200
+
+/*PostAttendeesOK Attendee was created
+
+swagger:response postAttendeesOK
+*/
+type PostAttendeesOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Attendee `json:"body,omitempty"`
+}
+
+// NewPostAttendeesOK creates PostAttendeesOK with default headers values
+func NewPostAttendeesOK() *PostAttendeesOK {
+
+	return &PostAttendeesOK{}
+}
+
+// WithPayload adds the payload to the post attendees o k response
+func (o *PostAttendeesOK) WithPayload(payload *models.Attendee) *PostAttendeesOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post attendees o k response
+func (o *PostAttendeesOK) SetPayload(payload *models.Attendee) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostAttendeesOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*PostAttendeesDefault generic error response
+
+swagger:response postAttendeesDefault
+*/
+type PostAttendeesDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewPostAttendeesDefault creates PostAttendeesDefault with default headers values
+func NewPostAttendeesDefault(code int) *PostAttendeesDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &PostAttendeesDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the post attendees default response
+func (o *PostAttendeesDefault) WithStatusCode(code int) *PostAttendeesDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the post attendees default response
+func (o *PostAttendeesDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the post attendees default response
+func (o *PostAttendeesDefault) WithPayload(payload *models.Error) *PostAttendeesDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post attendees default response
+func (o *PostAttendeesDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostAttendeesDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
