# restapi/operations/talks/delete_attendee_from_talk_responses.go
@@ -1,0 +1,96 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package talks
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/sctskw/attend.io/models"
+)
+
+// DeleteAttendeeFromTalkNoContentCode is the HTTP code returned for type DeleteAttendeeFromTalkNoContent
+const DeleteAttendeeFromTalkNoContentCode int = 204
+
+/*DeleteAttendeeFromTalkNoContent Attendeed was deleted from Talk.
+
+swagger:response deleteAttendeeFromTalkNoContent
+*/
+type DeleteAttendeeFromTalkNoContent struct {
+}
+
+// NewDeleteAttendeeFromTalkNoContent creates DeleteAttendeeFromTalkNoContent with default headers values
+func NewDeleteAttendeeFromTalkNoContent() *DeleteAttendeeFromTalkNoContent {
+
+	return &DeleteAttendeeFromTalkNoContent{}
+}
+
+// WriteResponse to the client
+func (o *DeleteAttendeeFromTalkNoContent) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(204)
+}
+
+/*DeleteAttendeeFromTalkDefault generic error response
+
+swagger:response deleteAttendeeFromTalkDefault
+*/
+type DeleteAttendeeFromTalkDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewDeleteAttendeeFromTalkDefault creates DeleteAttendeeFromTalkDefault with default headers values
+func NewDeleteAttendeeFromTalkDefault(code int) *DeleteAttendeeFromTalkDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &DeleteAttendeeFromTalkDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the delete attendee from talk default response
+func (o *DeleteAttendeeFromTalkDefault) WithStatusCode(code int) *DeleteAttendeeFromTalkDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the delete attendee from talk default response
+func (o *DeleteAttendeeFromTalkDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the delete attendee from talk default response
+func (o *DeleteAttendeeFromTalkDefault) WithPayload(payload *models.Error) *DeleteAttendeeFromTalkDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete attendee from talk default response
+func (o *DeleteAttendeeFromTalkDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeleteAttendeeFromTalkDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
